tests/negative/semantic/array_index_bool/input.ci
void main() {
    int[] xs = [1, 2];
    print(toString(xs[true]) + "\n");
}
